--- a/style.css
+++ b/style.css
@@ -20,9 +20,32 @@ h3 {
 
 body {
     color: black;
-    background-color: rgba(230, 180, 134, 0.842);
+    background-color: rgb(178, 200, 209);
     line-height: 1.5;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif
 
+}
+.osobni_udaje,
+.vzdelani,
+.zajmy {
+    background-color: cornsilk;
+}
+
+.pracovni_zkusenosti,
+.dalsi_vzdelani {
+    background-color: rgb(178, 200, 209);
+}
+
+.paticka {
+    background-color: black;
+    color: white;
+    text-align: center;
+    
+     
+}
+
+.foto_osobni_udaje {
+    width: 300px;
+    height: 200px;
 }
