--- a/style.css
+++ b/style.css
@@ -3,19 +3,22 @@ h1 {
     font-size: 40px;
     font-weight: bold;
     font-style: italic;
+    text-align: center;
 
 }
 
 h2 {
     color: black;
     font-weight: bold;
-    font-style: italic
+    font-style: italic;
+    text-align: center;
 }
 
 h3 {
     color: black;
     font-weight: bold;
-    font-style: italic
+    font-style: italic;
+
 }
 
 body {
@@ -23,7 +26,8 @@ body {
     background-color: rgb(178, 200, 209);
     line-height: 1.5;
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0
 
 }
 .osobni_udaje,
@@ -41,11 +45,17 @@ body {
     background-color: black;
     color: white;
     text-align: center;
-    
-     
+    padding: 10px 0;
 }
 
 .foto_osobni_udaje {
     width: 300px;
     height: 200px;
+    border: 2px solid black;
+    border-radius: 20px;
+}
+
+section {
+    padding: 30px 10%;
+
 }
