--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1 {
     font-weight: bold;
     font-style: italic;
     text-align: center;
-
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
 h2 {
@@ -12,6 +12,7 @@ h2 {
     font-weight: bold;
     font-style: italic;
     text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h3 {
